# Generator

./: .gitignore  Hardware.md  LICENSE  README.md
.github/workflows/: go.yml  rust.yml
SuperCollider/: TouchOSC Test.touchosc  cpuInfo.sh  generator.scd  startup.scd  synths.scd
go/src/: generator.go
go/src/rotaryencoder/: rotary-encoder.go
input/: Cargo.toml  README.md
input/.cargo/: config.toml
input/src/: main.rs
overlays/: README.md  generator.dtbo  gpio-mostly-no-irq.dts
sound/: Cargo.toml
sound/src/: main.rs
