[package]
name = "sound"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cpal = "0.13.5"
anyhow = "1.0.12"
rosc = "0.6.0"
clap = { version = "3.1", default-features = false, features = ["std"] }
crossbeam-channel = "0.5"
